# nn-star-mapper

./: README.md  detect_stars.py  draw.py  netgen.py  optimize.py  plan.md  project.py  pyproject.toml  snap.py
.claude/: CLAUDE.md
