[project]
name = "nn-star-mapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "astropy>=8.0.0",
    "click>=8.4.1",
    "imageio>=2.37.3",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "photutils>=3.0.0",
]

[tool.ruff.lint]
ignore = ["E741"]
